--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_tts: ^4.0.2
   audioplayers: ^6.5.0
   youtube_player_flutter: ^8.1.2
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
