--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: blackbird
-description: "A new Flutter project."
+description: "A thologically indepth bible study app"
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -18,7 +18,7 @@ dependencies:
   share_plus: ^9.0.0
   http: ^1.2.0
   html: ^0.15.6
-  # AI & Enhanced UI
+  flutter_launcher_icons: ^0.13.1
   google_generative_ai: ^0.4.3
   flutter_animate: ^4.5.0
   glassmorphism: ^3.0.0
@@ -37,6 +37,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
 flutter:
   uses-material-design: true
