--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^6.1.5
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   sqflite: ^2.3.3+1
   path: ^1.9.0
   shared_preferences: ^2.2.3
-  webview_flutter: ^4.7.0
-  share_plus: ^9.0.0
+  webview_flutter: ^4.13.0
+  share_plus: ^11.0.0
   http: ^1.2.0
   html: ^0.15.6
   flutter_launcher_icons: ^0.13.1
@@ -27,10 +28,10 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   google_fonts: ^6.2.1
   flutter_markdown: ^0.7.3+1
-  speech_to_text: ^6.6.2
+  speech_to_text: ^7.2.0
   flutter_tts: ^4.0.2
   audioplayers: ^6.5.0
-  youtube_player_flutter: ^8.1.2
+  youtube_player_flutter: ^9.1.2
   connectivity_plus: ^6.0.5
 
 dev_dependencies:
