--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   audioplayers: ^6.5.0
   youtube_player_flutter: ^9.1.2
   connectivity_plus: ^6.0.5
+  flutter_screenutil: ^5.9.3
+  cloud_firestore: ^6.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
